--- a/frontend/foundation/css/foundation.css
+++ b/frontend/foundation/css/foundation.css
@@ -1939,6 +1939,8 @@ meta.foundation-mq-topbar {
     border-width: 1px;
     border-color: #b6edff;
     margin-bottom: 1.25rem;
+    margin-right: 0.5rem;
+    margin-left:0.5rem;
     padding: 1.25rem;
     background: #ecfaff; }
     .panel.callout > :first-child {
@@ -4527,6 +4529,7 @@ select {
   -webkit-appearance: none !important;
   -webkit-border-radius: 0px;
   background-color: #fafafa;
+  font-family: 'Oswald', sans-serif;
   background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZlcnNpb249IjEuMSIgeD0iMTJweCIgeT0iMHB4IiB3aWR0aD0iMjRweCIgaGVpZ2h0PSIzcHgiIHZpZXdCb3g9IjAgMCA2IDMiIGVuYWJsZS1iYWNrZ3JvdW5kPSJuZXcgMCAwIDYgMyIgeG1sOnNwYWNlPSJwcmVzZXJ2ZSI+PHBvbHlnb24gcG9pbnRzPSI1Ljk5MiwwIDIuOTkyLDMgLTAuMDA4LDAgIi8+PC9zdmc+);
   background-position: 100% center;
   background-repeat: no-repeat;
