--- a/frontend/foundation/css/foundation.css
+++ b/frontend/foundation/css/foundation.css
@@ -39,8 +39,8 @@ body {
   font-size: 100%; }
 
 body {
-  background: white;
-  color: #222222;
+  background: #AAC3F0;
+  color: #eee;
   padding: 0;
   margin: 0;
   font-family: 'Oswald', sans-serif;
