Jade & Express working, cleaned up static files, after (╯°□°)╯︵ ┻━┻

--- a/framework/views/home.jade
+++ b/framework/views/home.jade
@@ -1,16 +1,12 @@
 doctype html
 html.no-js(lang='en')
-head
+  head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Dashboard
     link(rel='stylesheet', href='foundation/css/foundation.css')
     script(src='foundation/js/vendor/modernizr.js')
     link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
-<<<<<<< HEAD
-=======
-    
->>>>>>> 5e77124379accac1b9282a2e67c97c7bf7946e26
   body
     nav.top-bar(data-topbar='data-topbar')
       ul.title-area
@@ -121,7 +117,7 @@ head
                     .large-12.columns
                       a
                         h4(stlye='float:right;', align='right')
-                          font(color='F21111') x
+                          font(color='F21111') &times;
                       .row.collapse
                         .small-5.columns
                           span.prefix Worth
@@ -201,7 +197,7 @@ head
                 .large-2.columns
                   a
                     h4(stlye='float:right;', align='right')
-                      font(color='F21111') x
+                      font(color='F21111') &times;
                   .row
                     br
                     br
