--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -1,6 +1,187 @@
-﻿extends layout
+//- ﻿extends layout
+//-
+//- block pageTitle
+//-     .jumbotron
+//-         h1 INSVRT NAME HERE
+//-         h2 INSVRT NAME HERE is an innovative new platofrm that allows teachers and students to testing testing for a revolutionry education for Amurica and blah blah.
 
-block pageTitle
-    .jumbotron
-        h1 INSVRT NAME HERE
-        h2 INSVRT NAME HERE is an innovative new platofrm that allows teachers and students to testing testing for a revolutionry education for Amurica and blah blah.
+
+doctype html
+html.no-js(lang='en')
+  head
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    title Landing
+    link(rel='stylesheet', href='css/foundation.css')
+    link(rel='stylesheet', type='text/css', href='css/slick.css')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
+    link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
+  body
+    br
+    br
+    .row
+      .large-12.columns
+        h1 [Sample Text] Teacher's Portal
+        br
+    .row
+      .large-12.columns
+        .panel
+          h3 We’re stoked you want to try [Sample Text]!
+          p To get going, first register. Then check out this awesome shit.
+          p Once you're exhausted our shitty service, you probably shouldn't check out...
+          br
+          .row
+            .large-4.medium-4.columns
+              center
+                p
+                  a(href='#', data-reveal-id='teacherModal') Teachers...
+                  br
+                  | Sign in to your account to create tests, manage tests, and observe students' preformance.
+              center
+                a.medium.button(href='#', data-reveal-id='teacherModal') Sign In
+              #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                h3
+                  center Sign In
+                br
+                .row
+                  .large-6.columns
+                    .callout.panel
+                      h4
+                        center Register
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Email:
+                            .small-9.columns
+                              input(type='text', placeholder='Email...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username:
+                            .small-9.columns
+                              input(type='text', placeholder='Username...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Submit
+                        br
+                  .large-6.columns
+                    .callout.panel
+                      br
+                      br
+                      h4
+                        center Already Registered?
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username/Email:
+                            .small-9.columns
+                              input(type='text', placeholder='User/Email...')
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Login
+                        br
+                a.close-reveal-modal ×
+            .large-4.medium-4.columns
+              center
+                p
+                  a(href='https://github.com/justinyangusa/angelhack') [Insert] on Github
+                  br
+                  | Latest code, issue reports, feature requests and more.
+            .large-4.medium-4.columns
+              center
+                p
+                  a(href='#', data-reveal-id='studentModal') Students...
+                  br
+                  | Login to take current tests, check previous test scores, and
+              center
+                a.medium.button(href='#', data-reveal-id='studentModal') Sign In
+              #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
+                h3
+                  center Sign In
+                br
+                .row
+                  .large-6.columns
+                    .callout.panel
+                      h4
+                        center Register
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Email:
+                            .small-9.columns
+                              input(type='text', placeholder='Email...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username:
+                            .small-9.columns
+                              input(type='text', placeholder='Username...')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Submit
+                        br
+                  .large-6.columns
+                    .callout.panel
+                      br
+                      br
+                      h4
+                        center Already Registered?
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Username/Email:
+                            .small-9.columns
+                              input(type='text', placeholder='User/Email...')
+                      br
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-3.columns
+                              span.prefix Password:
+                            .small-9.columns
+                              input(type='text', placeholder='Password...')
+                      br
+                      center
+                        a.medium.round.success.button(href='#') Login
+                        br
+                a.close-reveal-modal ×
+          .row
+            .large-12.columns
+              center
+                p &copy Justin Yang 2014
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+    script
+      $(document).foundation();
