Cleaned up framework and frontend, icnluding integration

--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -4,7 +4,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='stylesheets/style.css')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
     link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.min.css')
@@ -24,11 +24,11 @@ html
                 #bs-example-navbar-collapse-1(class='collapse navbar-collapse')
                     ul(class='nav navbar-nav')
                         li
-                            a(href='/recipies/bbq') herp
+                            a(href='/recipes/bbq') herp
                         li
-                            a(href='/recipies/brunch') derp
+                            a(href='/recipes/brunch') derp
                         li
-                            a(href='/recipies/dessert') nyan
+                            a(href='/recipes/dessert') nyan
 
     //These are populated by extension views
     block pageTitle
