--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -12,11 +12,12 @@ html.no-js(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Landing
-    link(rel='stylesheet', href='css/foundation.css')
-    link(rel='stylesheet', type='text/css', href='css/slick.css')
+    link(rel='stylesheet', href='stylesheets/foundation.css')
+    link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
     link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
   body
+    a(href='/home') Portal Home
     br
     br
     .row
