--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -1,15 +1,16 @@
 ﻿//Layout.jade defines the layout of the website. It contains the navbar and
 //extension views will populate pageTitle and pageContent blocks
+
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='stylesheets/style.css')
+  head.no-js(lang='en')
+    title= "INSERT NAME HERE"
+    meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.min.css')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/normalize.css')
-    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+    link(rel='stylesheet', href='stylesheets/foundation.css')
+    link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
+    link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
   body
     block navBar
         nav(class='navbar navbar-default', role='navigation')
@@ -20,16 +21,20 @@ html
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a(class='navbar-brand', href='/#') INSVERT NAME HERE
+                    a(class='navbar-brand', href='/#') Home
                 #bs-example-navbar-collapse-1(class='collapse navbar-collapse')
                     ul(class='nav navbar-nav')
                         li
-                            a(href='/recipes/bbq') herp
+                          a(href='/home') Teacher Portal
                         li
-                            a(href='/recipes/brunch') derp
+                          a(href='/home/test') Shh! Testing in Progress
                         li
-                            a(href='/recipes/dessert') nyan
+                          a(href='/home/results') Test Results
 
     //These are populated by extension views
     block pageTitle
     block pageContent
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
+    script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+    script
+      $(document).foundation();
