Add ng framework

--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -86,7 +86,7 @@ block pageContent
                     center
                       a.medium.round.success.button(href='#') Login
                       br
-              a.close-reveal-modal ×
+              a.close-reveal-modal &times;
           .large-4.medium-4.columns
             center
               p
@@ -162,7 +162,7 @@ block pageContent
                     center
                       a.medium.round.success.button(href='#') Login
                       br
-              a.close-reveal-modal ×
+              a.close-reveal-modal &times;
         .row
           .large-12.columns
             center
