--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -1,16 +1,17 @@
-﻿//Layout.jade defines the layout of the website. It contains the navbar and
-//extension views will populate pageTitle and pageContent blocks
+﻿//
+  Layout.jade defines the layout of the website. It contains the navbar and
+  extension views will populate pageTitle and pageContent blocks
 
 doctype html
-html
-  head.no-js(lang='en')
+html(ng-app='ngAddApp', lang='en')
+  head.no-js
     title= "INSERT NAME HERE"
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='stylesheets/foundation.css')
     link(rel='stylesheet', type='text/css', href='stylesheets/slick.css')
     link(href='http://fonts.googleapis.com/css?family=Oswald:500,300', rel='stylesheet', type='text/css')
-  body
+  body(ng-controller='MainCtrl')
     block navBar
       .fixed
         nav.top-bar(data-topbar='data-topbar')
@@ -35,7 +36,9 @@ html
                Left Nav Section
             ul.left
               li.active
-                a(href='#') Home
+                a(href='/') Home
+              li
+                a(href='/home') Portal
               li.divider
               li.has-form
                 .row.collapse
@@ -51,6 +54,7 @@ html
     block pageContent
 
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js')
+    script(src='button.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
