--- a/framework/views/home.jade
+++ b/framework/views/home.jade
@@ -24,28 +24,14 @@ block rightBar
           li
             a(href='img/folderpic.jpg')
               img(data-caption='File 3', src='img/folderpic.jpg')
-          li
-            a(href='img/folderpic.jpg')
-              img(data-caption='File 4', src='img/folderpic.jpg')
-          li
-            a(href='img/folderpic.jpg')
-              img(data-caption='File 1', src='img/folderpic.jpg')
-          li
-            a(href='img/folderpic.jpg')
-              img(data-caption='File 2', src='img/folderpic.jpg')
-          li
-            a(href='img/folderpic.jpg')
-              img(data-caption='File 3', src='img/folderpic.jpg')
-          li
-            a(href='img/folderpic.jpg')
-              img(data-caption='File 4', src='img/folderpic.jpg')
-    a.close-reveal-modal ×
+    a.close-reveal-modal &times;
 
 
 block pageContent
-  .row
-    .large-12.columns
-      h1 Dashboard
+  .sticky
+    .row
+      .large-12.columns
+        h1 Dashboard
   .row
     .large-12.columns
       .panel
@@ -90,94 +76,96 @@ block pageContent
                         input(type='text', placeholder='')
                       .small-3.columns
                         span.postfix Pts.
-        .row
-          .callout.panel
+        div(ng-repeat='question in questions')
+          .form-group
             .row
-              .large-3.columns
-                center
-                  h4 Question Type
-                select
-                  option(value='mc') Multiple Choice
-                  option(value='sa') Short Answer
-                  option(value='matching') Matching
-                  option(value='fuck') Other
-              .large-7.columns
-                center
-                  h4 Question Info
+              .callout.panel
                 .row
-                  .large-12.columns
-                    .row.collapse
-                      .small-2.columns
-                        span.prefix Question:
-                      .small-10.columns
-                        input(type='text', placeholder='e.g. How big is China...?')
-                .row
-                  .large-12.columns
-                    .row.collapse
-                      .small-2.columns
-                        br
-                        center
-                          h6 # Answer Choices
-                        select
-                          option(value='two') 2
-                          option(value='three') 3
-                          option(value='four') 4
-                          option(value='five') 5
-                        center
-                          h6 Correct Answer
-                        select
-                          option(value='a') A
-                          option(value='b') B
-                          option(value='c') C
-                          option(value='d') D
-                      .small-9.columns
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-2.columns
-                                span.prefix A:
-                              .small-10.columns
-                                input(type='text', placeholder='Apple')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-2.columns
-                                span.prefix B:
-                              .small-10.columns
-                                input(type='text', placeholder='Banana')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-2.columns
-                                span.prefix C:
-                              .small-10.columns
-                                input(type='text', placeholder='Carrot')
-                        .row
-                          .large-12.columns
-                            .row.collapse
-                              .small-2.columns
-                                span.prefix D:
-                              .small-10.columns
-                                input(type='text', placeholder='Dick')
-              .large-2.columns
-                a
-                  h4(stlye='float:right;', align='right')
-                    font(color='F21111') &times;
-                .row
-                  br
-                  br
-                  .large-12.columns
+                  .large-3.columns
                     center
-                      input#checkbox1(type='checkbox')
-                      label(for='random') Randomize?
-                  .large-12.columns
-                    .row.collapse
-                      .small-5.columns
-                        span.prefix Worth
-                      .small-4.columns
-                        input(type='text', placeholder='')
-                      .small-3.columns
-                        span.postfix Pts.
+                      h4 Question Type
+                    select
+                      option(value='mc') Multiple Choice
+                      option(value='sa') Short Answer
+                      option(value='matching') Matching
+                      option(value='fuck') Other
+                  .large-7.columns
+                    center
+                      h4 Question Info
+                    .row
+                      .large-12.columns
+                        .row.collapse
+                          .small-2.columns
+                            span.prefix Question:
+                          .small-10.columns
+                            input.form-control.medform(type='text', placeholder='e.g. How big is China?', ng-model='item.text')
+                    .row
+                      .large-12.columns
+                        .row.collapse
+                          .small-2.columns
+                            br
+                            center
+                              h6 # Answer Choices
+                            select
+                              option(value='two') 2
+                              option(value='three') 3
+                              option(value='four') 4
+                              option(value='five') 5
+                            center
+                              h6 Correct Answer
+                            select
+                              option(value='a') A
+                              option(value='b') B
+                              option(value='c') C
+                              option(value='d') D
+                          .small-9.columns
+                            .row
+                              .large-12.columns
+                                .row.collapse
+                                  .small-2.columns
+                                    span.prefix A:
+                                  .small-10.columns
+                                    input(type='text', placeholder='Apple')
+                            .row
+                              .large-12.columns
+                                .row.collapse
+                                  .small-2.columns
+                                    span.prefix B:
+                                  .small-10.columns
+                                    input(type='text', placeholder='Banana')
+                            .row
+                              .large-12.columns
+                                .row.collapse
+                                  .small-2.columns
+                                    span.prefix C:
+                                  .small-10.columns
+                                    input(type='text', placeholder='Carrot')
+                            .row
+                              .large-12.columns
+                                .row.collapse
+                                  .small-2.columns
+                                    span.prefix D:
+                                  .small-10.columns
+                                    input(type='text', placeholder='Dick')
+                  .large-2.columns
+                    a
+                      h4(stlye='float:right;', align='right')
+                        font(color='F21111') &times;
+                    .row
+                      br
+                      br
+                      .large-12.columns
+                        center
+                          input#checkbox1(type='checkbox')
+                          label(for='random') Randomize?
+                      .large-12.columns
+                        .row.collapse
+                          .small-5.columns
+                            span.prefix Worth
+                          .small-4.columns
+                            input(type='text', placeholder='')
+                          .small-3.columns
+                            span.postfix Pts.
           br
-        center
-          a.large.radius.button(href='#') Add Question
+        a.large.radius.button
+          button.btn(type='button', ng-click='newQuestion()') Add Question
