--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -2,17 +2,17 @@ extends layout
 
 block pageTitle
   .jumbotron
-    h1= appname
-    h2 #{appname} is an innovative new platform that allows teachers and students to testing testing for a revolutionry education for Amurica and blah blah.
+    h1= eTest
+    h2 eTest is an innovative new platform that allows teachers and students to testing testing for a revolutionry education for Amurica and blah blah.
 block pageContent
   .row
     .large-12.columns
-      h1 #{appname} Teacher's Portal
+      h1 eTest Teacher's Portal
       br
   .row
     .large-12.columns
       .panel
-        h3 We’re stoked you want to try #{appname}!
+        h3 We’re stoked you want to try eTest!
         p To get going, first register. Then check out this awesome shit.
         p Once you're exhausted our shitty service, you probably shouldn't check out...
         br
@@ -90,7 +90,7 @@ block pageContent
           .large-4.medium-4.columns
             center
               p
-                a(href='https://github.com/justinyangusa/angelhack') [Insert] on Github
+                a(href='https://github.com/justinyangusa/angelhack') eTest on Github
                 br
                 | Latest code, issue reports, feature requests and more.
           .large-4.medium-4.columns
@@ -166,4 +166,4 @@ block pageContent
         .row
           .large-12.columns
             center
-              p #{appname} &copy Justin Yang 2014
+              p eTest &copy Justin Yang 2014
