--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -57,11 +57,7 @@ html(ng-app='ngAddApp', lang='en')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
-<<<<<<< HEAD
+
     script(src='questions.js', deferred='')
     script(src='button.js', deferred='')
-    script
-      $(document).foundation();
-=======
-    script $(document).foundation();
->>>>>>> origin/master
+    script($(document).foundation();)
