--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -39,7 +39,7 @@ html(ng-app='ngAddApp', lang='en')
               li.active
                 a(href='/') Home
               li
-                a(href='/home') Portal
+                a(href='/newtest') Portal
               li.divider
               li.has-form
                 .row.collapse
