--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -34,96 +34,97 @@ block pageContent
   .row
     .large-12.columns
       .panel
-        div(ng-repeat='question in questions')
-
-          form.form-group
-            .row
-              .callout.panel
-                .row
-                  .large-3.columns
-                    center
-                      h4 Question Type
-                    select.question-type
-                      option(value='mtpl') Multiple Choice
-                      option(value='shrt') Short Answer
-                      option(value='mtch') Matching
-                      option(value='fuck') Other
-                  .large-7.columns
-                    center
-                      h4 Question Info
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-2.columns
-                            span.prefix Question:
-                          .small-10.columns
-                            input.form-control.medform(type='text', placeholder='e.g. How big is China?', ng-model='item.text')
-                    .row
-                      .large-12.columns
-                        .row.collapse
-                          .small-2.columns
-                            br
-                            center
-                              h6 # Answer Choices
-                            select
-                              option(value='two') 2
-                              option(value='three') 3
-                              option(value='four') 4
-                              option(value='five') 5
-                            center
-                              h6 Correct Answer
-                                select
-                                  div(ng-repeat='answer in answers')
-                                    .form-group
-                                      option(value='a') A
-                          .small-9.columns
-                            .row
-                              .large-12.columns
-                                .row.collapse
-                                  .small-2.columns
-                                    span.prefix A:
-                                  .small-10.columns
-                                    input(type='text', placeholder='Apple')
-                            .row
-                              .large-12.columns
-                                .row.collapse
-                                  .small-2.columns
-                                    span.prefix B:
-                                  .small-10.columns
-                                    input(type='text', placeholder='Banana')
-                            .row
-                              .large-12.columns
-                                .row.collapse
-                                  .small-2.columns
-                                    span.prefix C:
-                                  .small-10.columns
-                                    input(type='text', placeholder='Carrot')
-                            .row
-                              .large-12.columns
-                                .row.collapse
-                                  .small-2.columns
-                                    span.prefix D:
-                                  .small-10.columns
-                                    input(type='text', placeholder='Daikon')
-                  .large-2.columns
-                    a
-                      h4(stlye='float:right;', align='right')
-                        font(color='F21111') &times;
-                    .row
-                      br
-                      br
-                      .large-12.columns
-                        center
-                          input#checkbox1(type='checkbox')
-                          label(for='random') Randomize?
-                      .large-12.columns
-                        .row.collapse
-                          .small-5.columns
-                            span.prefix Worth
-                          .small-4.columns
-                            input(type='text', placeholder='')
-                          .small-3.columns
-                            span.postfix Pts.
-          br
-        center
-          a.medium.radius.button(ng-click='newQuestion()') Add Question
+        form#newtestCreation
+          div(ng-repeat='question in questions')
+            .form-group
+              .row
+                .callout.panel
+                  .row
+                    .large-3.columns
+                      center
+                        h4 Question Type
+                      select.question-type
+                        option(value='mtpl') Multiple Choice
+                        option(value='shrt') Short Answer
+                        option(value='mtch') Matching
+                        option(value='fuck') Other
+                    .large-7.columns
+                      center
+                        h4 Question Info
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-2.columns
+                              span.prefix Question:
+                            .small-10.columns
+                              input.form-control.medform(type='text', placeholder='e.g. How big is China?', ng-model='item.text')
+                      .row
+                        .large-12.columns
+                          .row.collapse
+                            .small-2.columns
+                              br
+                              center
+                                h6 # Answer Choices
+                              select
+                                option(value='two') 2
+                                option(value='three') 3
+                                option(value='four') 4
+                                option(value='five') 5
+                              center
+                                h6 Correct Answer
+                                  select
+                                    div(ng-repeat='answer in answers')
+                                      .form-group
+                                        option(value='a') A
+                            .small-9.columns
+                              .row
+                                .large-12.columns
+                                  .row.collapse
+                                    .small-2.columns
+                                      span.prefix A:
+                                    .small-10.columns
+                                      input(type='text', placeholder='Apple')
+                              .row
+                                .large-12.columns
+                                  .row.collapse
+                                    .small-2.columns
+                                      span.prefix B:
+                                    .small-10.columns
+                                      input(type='text', placeholder='Banana')
+                              .row
+                                .large-12.columns
+                                  .row.collapse
+                                    .small-2.columns
+                                      span.prefix C:
+                                    .small-10.columns
+                                      input(type='text', placeholder='Carrot')
+                              .row
+                                .large-12.columns
+                                  .row.collapse
+                                    .small-2.columns
+                                      span.prefix D:
+                                    .small-10.columns
+                                      input(type='text', placeholder='Daikon')
+                    .large-2.columns
+                      a
+                        h4(stlye='float:right;', align='right')
+                          font(color='F21111') &times;
+                      .row
+                        br
+                        br
+                        .large-12.columns
+                          center
+                            input#checkbox1(type='checkbox')
+                            label(for='random') Randomize?
+                        .large-12.columns
+                          .row.collapse
+                            .small-5.columns
+                              span.prefix Worth
+                            .small-4.columns
+                              input(type='text', placeholder='')
+                            .small-3.columns
+                              span.postfix Pts.
+            br
+          center
+            a.medium.radius.button(ng-click='newQuestion()') Add Question
+            input(name ="submit" value="Submit" type="submit")
