--- a/framework/public/stylesheets/foundation.css
+++ b/framework/public/stylesheets/foundation.css
@@ -4518,7 +4518,28 @@ textarea {
 
 input[type="submit"] {
   -webkit-appearance: none;
-  -webkit-border-radius: 0px; }
+  -webkit-border-radius: 0px;
+border-style: solid;
+  border-width: 0px;
+  cursor: pointer;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
+  line-height: normal;
+  margin: 0 0 1.25rem;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+  display: inline-block;
+  padding-top: 1rem;
+  padding-right: 2rem;
+  padding-bottom: 1.0625rem;
+  padding-left: 2rem;
+  font-size: 1rem;
+  background-color: #008cba;
+  border-color: #007095;
+  color: white;}
 
 /* Respect enforced amount of rows for textarea */
 textarea[rows] {
