More minor thigs

--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -38,7 +38,7 @@ block pageContent
   .row
     .large-12.columns
       .panel
-        form#newtestCreation
+        form(action="teacherTestSubmission.js")#newtestCreation
           div(ng-repeat='question in questions')
             .form-group
               .row
