--- a/framework/public/stylesheets/foundation.css
+++ b/framework/public/stylesheets/foundation.css
@@ -4519,7 +4519,7 @@ textarea {
 input[type="submit"] {
   -webkit-appearance: none;
   -webkit-border-radius: 0px;
-border-style: solid;
+  border-style: solid;
   border-width: 0px;
   cursor: pointer;
   font-family: 'Oswald', sans-serif;
@@ -4539,7 +4539,13 @@ border-style: solid;
   font-size: 1rem;
   background-color: #008cba;
   border-color: #007095;
-  color: white;}
+  color: white;
+  border-radius: 3px;
+  input:hover, button:focus, .button:hover, .button:focus {
+    background-color: #007095; }
+  button:hover, button:focus, .button:hover, .button:focus {
+    color: white; }
+}
 
 /* Respect enforced amount of rows for textarea */
 textarea[rows] {
