--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -44,7 +44,7 @@ html(ng-app='ngAddApp', lang='en')
               li.has-form
                 .row.collapse
                   .large-8.columns
-                    input(type='text', placeholder='Search...')
+                    input(type='text', placeholder='Search...' style='height:2.098rem')
                   .large-4.columns
                     a.alert.button.expand(href='#') Search
       br
