--- a/framework/views/newtest.jade
+++ b/framework/views/newtest.jade
@@ -47,7 +47,7 @@ block pageContent
                     .large-3.columns
                       center
                         h4 Question Type
-                      select.question-type
+                      select(form="newtestCreation" name="questionChoice").question-type
                         option(value='mtpl') Multiple Choice
                         option(value='shrt') Short Answer
                         option(value='mtch') Matching
@@ -69,7 +69,7 @@ block pageContent
                               br
                               center
                                 h6 # Answer Choices
-                              select
+                              select(form="newtestCreation" name="amtAnswers")
                                 option(value='two') 2
                                 option(value='three') 3
                                 option(value='four') 4
@@ -79,7 +79,7 @@ block pageContent
                                   select
                                     div(ng-repeat='answer in answers')
                                       .form-group
-                                        option(value='a') A
+                                        option(name="correctAnswer" value='a') A
                             .small-9.columns
                               .row
                                 .large-12.columns
@@ -87,21 +87,21 @@ block pageContent
                                     .small-2.columns
                                       span.prefix A:
                                     .small-10.columns
-                                      input(type='text', placeholder='Apple')
+                                      input(type='text', name="answer", placeholder='Apple')
                               .row
                                 .large-12.columns
                                   .row.collapse
                                     .small-2.columns
                                       span.prefix B:
                                     .small-10.columns
-                                      input(type='text', placeholder='Banana')
+                                      input(type='text',name="answer", placeholder='Banana')
                               .row
                                 .large-12.columns
                                   .row.collapse
                                     .small-2.columns
                                       span.prefix C:
                                     .small-10.columns
-                                      input(type='text', placeholder='Carrot')
+                                      input(type='text',name="answer",placeholder='Carrot')
                               .row
                                 .large-12.columns
                                   .row.collapse
@@ -118,14 +118,14 @@ block pageContent
                         br
                         .large-12.columns
                           center
-                            input#checkbox1(type='checkbox')
+                            input#checkbox1(name="randomnized" type='checkbox')
                             label(for='random') Randomize?
                         .large-12.columns
                           .row.collapse
                             .small-5.columns
                               span.prefix Worth
                             .small-4.columns
-                              input(type='text', placeholder='')
+                              input(name="points" type='text', placeholder='')
                             .small-3.columns
                               span.postfix Pts.
             br
