will update login page for teacher portal later

--- a/framework/views/index.jade
+++ b/framework/views/index.jade
@@ -27,7 +27,7 @@ html(ng-app='ngAddApp', lang='en')
                   p
                     a(href='#', data-reveal-id='teacherModal') Teachers...
                     br
-                    | Sign in to your account to create tests, manage tests, and observe students' preformance.
+                    | Sign in to your account to create and manage tests.
                 center
                   a.medium.button(data-reveal-id='teacherModal') Sign In
                 #teacherModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
@@ -97,7 +97,7 @@ html(ng-app='ngAddApp', lang='en')
                   p
                     a(href='#', data-reveal-id='studentModal') Students...
                     br
-                    | Login to take current tests, check previous test scores, and
+                    | Login to take current tests and check previous test scores.
                 center
                   a.medium.button(href='#', data-reveal-id='studentModal') Sign In
                 #studentModal.reveal-modal(style='position: absolute; float: left;', data-reveal='data-reveal')
