Cleaned up framework/

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -20,7 +20,7 @@ html(ng-app='ngAddApp', lang='en')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
 
-    script(src='questions.js', deferred='')
-    script(src='button.js', deferred='')
+    script(src='js/questions.js', deferred='')
+    script(src='js/button.js', deferred='')
     scritp(src='teacherTestSubmission.js')
     script($(document).foundation();)
