Brought Ken's files into compliance with W3 specs by removing bad br and removed inline styles

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -6,7 +6,7 @@
 doctype html
 html(ng-app='ngAddApp', lang='en')
   head.no-js
-    title= "eTest"
+    title= eTest
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/css/foundation.css')
