--- a/framework/views/layout.jade
+++ b/framework/views/layout.jade
@@ -35,8 +35,7 @@ block bodyContent
                   input(type='text', placeholder='Search...' style='height:2.098rem')
                 .large-4.columns
                   a.alert.button.expand(href='#') Search
-    br
-    br
+    .spacer
 
   //These are populated by extension views
   block pageTitle
