Surpress Express body parser warning
Got rid of the annoying warning on running `node app.js`.

Allowed /test to display.

--- a/framework/views/test.jade
+++ b/framework/views/test.jade
@@ -1,8 +1,9 @@
 extends layout
-block pageTitle
-    h1 #{tests.kind}
-block pageContent
 
+block pageTitle
+    h1 Name of this freaking app
+block pageContent
+//
     ul
     each test in tests.list
         //create a new well for each test model
