Implemented basic LaTeX typesetting
Added MathJax which allows for easy rendering of LaTeX equations for typesetting expressions in questions.
Especially useful for math and science tests.

Currently testing on /test.

Known bugs:
- Lack of fraction bar.

Not implemented yet with teacher input.

--- a/framework/views/backbone.jade
+++ b/framework/views/backbone.jade
@@ -19,6 +19,7 @@ html(ng-app='ngAddApp', lang='en')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/modernizr.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/vendor/jquery.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js')
+    script(src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML")
 
     script(src='questions.js', deferred='')
     script(src='button.js', deferred='')
