--- a/framework/views/test.jade
+++ b/framework/views/test.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block pageTitle
-    h1 Name of this freaking app
+    h1 $$\int_{-1}^3 3x^2\,\mathrm{d}x = 28$$
+    h1 $$2 \Delta x\cdot\Delta p_x \geqslant \hbar$$
 block pageContent
 //
     ul
